--- a/HBMO/HBMO/HBMO.csproj
+++ b/HBMO/HBMO/HBMO.csproj
@@ -43,8 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Chromosome.cs" />
+    <Compile Include="HbmoInitialModel.cs" />
+    <Compile Include="MaterializedView.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
